--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-08-09 01:44:49
+lastsearch = 2024-08-09 05:39:02
 
 [www.facebook.com]
 match = -164.7%%
@@ -142,9 +142,9 @@ title = Pardis Sabeti
 url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
-match = -229.4%%
-title = Indoor tanning early in life is associated with increased risk ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8446110/
+match = -200.0%%
+title = Seeing the unseen of Chinese herbal medicine processing ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5773022/
 
 [books.google.com]
 match = -217.6%%
