--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-08-09 05:26:25
+lastsearch = 2024-08-09 05:41:30
 
 [tiki.vn]
 match = 16.0%%
@@ -12,14 +12,14 @@ title = Mua Chiếu trúc Đài Loan mặt trúc mặt lụa
 url = https://tiki.vn/chieu-truc-thanh-gap-doi-dai-loan-mat-truc-mat-lua-p10764702.html?spid=58961412
 
 [www.tiktok.com]
-match = -80.0%%
-title = Phim MAI của Trấn Thành sẽ được khởi chiếu tại Đài Loan ...
-url = https://www.tiktok.com/@danghoaly86/video/7348795087473609989
+match = 4.0%%
+title = Phim Mai Có Chiếu Ở Taiwan Không
+url = https://www.tiktok.com/discover/phim-mai-có-chiếu-ở-taiwan-không?lang=en
 
 [shopee.vn]
-match = -8.0%%
-title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
-url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
+match = -28.0%%
+title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
+url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
 
 [congly.vn]
 match = -72.0%%
@@ -27,9 +27,9 @@ title = Lừa đảo xuất khẩu lao động, người đàn ông Đài Loan l
 url = https://congly.vn/lua-dao-xuat-khau-lao-dong-nguoi-dan-ong-dai-loan-linh-12-nam-tu-399654.html
 
 [www.facebook.com]
-match = -60.0%%
-title = Du lịch tự do Đài Loan | Ngày 12 tháng 4 phim Mai của ...
-url = https://www.facebook.com/groups/867394263291528/posts/ngày-12-tháng-4-phim-mai-của-trấn-thành-sẽ-được-công-chiếu-toàn-đài-loan-với-tiê/7807974442566774/
+match = -124.0%%
+title = 20231212 Bản tin tiếng Việt PTS Đài Loan 公視越南語新聞 ...
+url = https://www.facebook.com/ptsvietnamesenews/videos/20231212-bản-tin-tiếng-việt-pts-đài-loan-公視越南語新聞/1378308362826085/
 
 [vi.wikipedia.org]
 match = -4.0%%
@@ -67,9 +67,9 @@ title = Phim Đài Loan
 url = https://tvmotchill.com/quoc-gia/phim-dai-loan/
 
 [www.youtube.com]
-match = -52.0%%
-title = Phim Lần Thứ Hai Mình Yêu Nhau tập 12 phim Đài Loan
-url = https://www.youtube.com/watch?v=6BYzIBOpKLw
+match = -68.0%%
+title = TRƯA 28/12: Nhật Bản sắp đưa tên lửa tới gần đảo Đài Loan
+url = https://www.youtube.com/watch?v=WHX0Pgqi_g4
 
 [znews.vn]
 match = -40.0%%
