--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-08-09 04:18:58
+lastsearch = 2024-08-09 05:48:24
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -920,4 +920,9 @@ url = https://dienmaycholon.com/kinh-nghiem-mua-sam/nguyen-nhan-va-cach-chinh-qu
 match = -200.0%%
 title = Cảnh sát giao thông Hà Nam giúp đỡ trẻ bị lạc về gia đình!
 url = https://hanamtv.vn/canh-sat-giao-thong-ha-nam-giup-do-tre-bi-lac-ve-gia-dinh-36884.html
+
+[mraovat.nguoi-viet.com]
+match = -75.0%%
+title = Việc Nhà - Domestic Assistance - mrv
+url = https://mraovat.nguoi-viet.com/classified/viec-nha-domestic-assistance-browse-94.aspx
 
