--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-08-09 03:31:09
+lastsearch = 2024-08-09 05:44:32
 
 [shopee.vn]
-match = -26.1%%
-title = chiếu nhựa thái bình tiện dụng (đủ mọi kích thước)
-url = https://shopee.vn/chiếu-nhựa-thái-bình-tiện-dụng-(đủ-mọi-kích-thước)-i.1134304416.23562686178
+match = 4.3%%
+title = Chiếu Nhựa Gấp Gọn Đủ Kích Cỡ Cao Cấp
+url = https://shopee.vn/Chiếu-Nhựa-Thái-Bình-Hàng-Việt-Nam-Chiếu-Nhựa-Gấp-Gọn-Đủ-Kích-Cỡ-Cao-Cấp-i.398388048.13666402755
 
 [www.facebook.com]
 match = 52.2%%
@@ -17,9 +17,9 @@ title = Chiếu Nhựa Thái Bình | Thanh Hóa
 url = https://www.facebook.com/chieunhuathaibinh/?locale=vi_VN
 
 [www.sendo.vn]
-match = -65.2%%
-title = chiếu nhựa thái bình tiện dụng (đủ mọi kích thước) - hot49w
-url = https://www.sendo.vn/chieu-nhua-thai-binh-tien-dung-du-moi-kich-thuoc-116416515.html
+match = -34.8%%
+title = Chiếu Nhựa Chung Anh Thái Bình Giá Tốt, Mua Khỏi ...
+url = https://www.sendo.vn/chieu-nhua-chung-anh-thai-binh.htm
 
 [trangvangvietnam.com]
 match = 21.7%%
@@ -72,9 +72,9 @@ title = chiếu nhựa thái bình gấp đôi 1.0x1.95
 url = https://h5.lazada.vn/products/freeship-max-ma-giam-gia-chieu-nhua-thai-binh-gap-doi-10x195-i1065314875.html
 
 [m.facebook.com]
-match = 85.0%%
-title = Chiếu nhựa Thái Bình
-url = https://m.facebook.com/p/Chiếu-nhựa-Thái-Bình-100083672378137/
+match = -43.5%%
+title = Chiếu Cói Thái Bình,Chiếu Nhựa,Chiếu Trúc cao cấp
+url = https://m.facebook.com/p/Chiếu-Cói-Thái-BìnhChiếu-NhựaChiếu-Trúc-cao-cấp-100046868362224/?locale=fr_CA
 
 [chieu.com.vn]
 match = -117.4%%
