--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-08-08 20:28:53
+lastsearch = 2024-08-09 05:35:54
 
 [www.diepxuan.com]
-match = 40.9%%
-title = Thảm giường nỉ 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ni-140x190.html
+match = 36.4%%
+title = Điệp Xuân Thảm giường Bode 140x190
+url = https://www.diepxuan.com/tham-giuong-bode-140x190.html
 
 [tiki.vn]
 match = -36.4%%
@@ -160,4 +160,9 @@ url = https://dongagroup.vn/noi-that-phong-ngu/chan-drap-nem-giuong-189.html
 match = -90.9%%
 title = Ga Chun 140 x 200 cm Bọc Nệm Cotton Satin Cao Cấp
 url = https://jysk.vn/ga-chun-140x200cm
+
+[noithatcaco.vn]
+match = -109.1%%
+title = 78+ mẫu giường bệt gỗ tự nhiên đẹp, sang trọng với giá tốt
+url = https://noithatcaco.vn/cam-nang-noi-that/mau-giuong-bet-go-tu-nhien-dep-849.html
 
