--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-08-09 01:19:15
+lastsearch = 2024-08-09 05:45:17
 
 [everon.online]
 match = -55.6%%
@@ -14,7 +14,7 @@ url = https://everon.online/blogs/news/top-4-bo-chan-ga-goi-everon-mau-trang-dep
 [everonvn.com.vn]
 match = -66.7%%
 title = Bộ Chăn Ga Everon Est-21039 màu xanh chất liệu gỗ tổng ...
-url = https://everonvn.com.vn/everon/2114/bo-everon-est-21039?srsltid=AfmBOorXTKx0HQ20GRNw3MCnY5l7jMcT11iIx7hvOSzNTMcJBbEm3mcd
+url = https://everonvn.com.vn/everon/2114/bo-everon-est-21039?srsltid=AfmBOor7kYIwD8eqNRo5gJv_9hW-1nxxd_DBpEy5pqmiuk8WCPKjHwt6
 
 [tongdailyeveron.com.vn]
 match = -5.3%%
@@ -24,7 +24,7 @@ url = https://tongdailyeveron.com.vn/collections/bo-chan-ga-giam-gia
 [demxanh.com]
 match = -7.4%%
 title = Bộ chăn ga gối Everon EPM-21069 | Khuyến mãi
-url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html?srsltid=AfmBOorXIL_NspbqnnMlKStvjeX1lz2PT1yYzdTghjea5_SBrSF_W8mo
+url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html?srsltid=AfmBOooktcZqrM-JVWSpoqJeqgVnKZe9G6rpW4qzmkKVNRAeydaWFrX9
 
 [everonhanquoc.vn]
 match = 22.2%%
@@ -42,9 +42,9 @@ title = Bộ Everon Epm-21070
 url = https://everon.net.vn/everon/2131/bo-everon-epm-21070
 
 [sieuthidemhanquoc.com.vn]
-match = 18.5%%
-title = Bộ chăn ga gối Everon EPT-21045
-url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-ept-21045-1527
+match = 22.2%%
+title = Bộ chăn ga gối Everon EPM-21060
+url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-21060-1523
 
 [shopee.vn]
 match = -70.4%%
