--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-08-09 03:48:00
+lastsearch = 2024-08-09 05:56:23
 
 [us.misumi-ec.com]
 match = -350.0%%
 title = GA16-16-6 | Enclosures - ABS Box, Water/Dust Proof, GA Series
-url = https://us.misumi-ec.com/vona2/detail/222000229166/?HissuCode=GA16-16-6&srsltid=AfmBOop5atB5xy_l8G29stFvmFk8-tq1SbqPGLf1aJKPJslS-7PaaOhP
+url = https://us.misumi-ec.com/vona2/detail/222000229166/?HissuCode=GA16-16-6
 
 [www.amazon.com]
 match = -91.7%%
@@ -287,9 +287,9 @@ title = Florida State University
 url = https://www.fsu.edu/
 
 [www.yelp.com]
-match = -100.0%%
-title = Con Ga Trong Restaurant Photos
-url = https://www.yelp.com/biz/con-ga-trong-restaurant-san-jose-2
+match = -133.3%%
+title = Pho Ga An Nam - Restaurant Reviews
+url = https://www.yelp.com/biz/pho-ga-an-nam-san-jose
 
 [www.fwe.com]
 match = -58.3%%
