--- a/images/man-tu-bung-tre-em/config.ini
+++ b/images/man-tu-bung-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-tre-em.html
 lastopen = 2024-06-07 00:52:30
 
 [search]
-lastsearch = 2024-08-09 03:37:26
+lastsearch = 2024-08-09 05:55:43
 
 [www.mantubung.com]
 match = -100.0%%
@@ -17,9 +17,9 @@ title = Màn chống muỗi cho bé gấp gọn dễ dàng bao quản, mùng ...
 url = https://manbinhminh.com/2509/man-chong-muoi-cho-be-gap-gon-de-dang-bao-quan-mung-chup-tu-bung.aspx
 
 [shopee.vn]
-match = -61.1%%
-title = màn tự bung giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=màn tự bung
+match = -127.8%%
+title = Màn chụp cho bé - Giá Tốt, Sale Tháng 08, Ship 0 Đồng
+url = https://shopee.vn/list/màn chụp/cho bé
 
 [h5.lazada.vn]
 match = -33.3%%
@@ -52,9 +52,9 @@ title = Mùng ngủ em bé ( mùng chụp em bé, mùng nôi em bé...)
 url = https://mungmocmien.com/collections/mung-chup-em-be
 
 [tiki.vn]
-match = -77.8%%
-title = Màn chụp cho bé hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=màn chụp cho bé
+match = -11.1%%
+title = Mua Màn chụp tự bung trẻ em 70 x 110cm
+url = https://tiki.vn/man-chup-tu-bung-tre-em-70-x-110cm-p25678625.html
 
 [mungchup.com]
 match = 5.6%%
