--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-08-09 04:49:20
+lastsearch = 2024-08-09 05:59:24
 
 [m.youtube.com]
 match = -144.4%%
@@ -17,9 +17,9 @@ title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
 url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.instagram.com]
-match = -144.4%%
-title = NEM CHAY SỐT KEM HẠNH NHÂN siêu ngon các đồng chí ơi. ...
-url = https://www.instagram.com/p/C9mD02RvBka/
+match = -100.0%%
+title = The Steady Market | 𝐍𝐄𝐌 𝐑𝐀́𝐍 𝐒𝐈𝐄̂𝐔 𝐍𝐆𝐎𝐍 𝐓𝐔̛̀ 𝐓𝐇𝐄 ...
+url = https://www.instagram.com/p/C-C4vjXPBHT/
 
 [www.facebook.com]
 match = 22.2%%
@@ -27,9 +27,9 @@ title = NEM Fashion - 𝐀́𝐎 𝐏𝐇𝐀𝐎
 url = https://www.facebook.com/story.php/?story_fbid=745952497567450&id=100064581196454
 
 [www.tiktok.com]
-match = -16.7%%
-title = Nem Nuong Que Huong Air Fryer
-url = https://www.tiktok.com/discover/nem-nuong-que-huong-air-fryer
+match = -138.9%%
+title = Nem rán (chả giò miền bắc). Ngon mà cao calo nha 🤣 ...
+url = https://www.tiktok.com/@caloer/video/7298682370100563208?lang=en
 
 [www.youtube.com]
 match = -144.4%%
