--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-08-09 03:45:49
+lastsearch = 2024-08-09 05:51:14
 
 [demxanh.com]
 match = 18.2%%
 title = Thảm trải giường lông cừu TLC 04
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-04.html?srsltid=AfmBOorCc8RSWqOfn_Dt5xLksEAlpbr6Kkj3LcOHFBZIgRL9uWRK1f50
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-04.html
 
 [demre.com.vn]
 match = 18.2%%
@@ -17,9 +17,9 @@ title = Thảm ghế thảm giường - Trang 7
 url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=created-asc&page=7
 
 [decoviet.vn]
-match = -50.0%%
-title = Thảm Lót Ghế Sofa | Thảm Phòng Khách Giá Rẻ
-url = https://decoviet.vn/tham-lot-ghe-sofa/
+match = 22.2%%
+title = Thảm Sofa Biên Hòa
+url = https://decoviet.vn/tham-sofa-bien-hoa/
 
 [demolympia.com]
 match = -40.9%%
@@ -27,13 +27,13 @@ title = Ga chống thấm Olympia cotton cao cấp mới
 url = https://demolympia.com/ga-chong-tham-olympia-cotton-cao-cap-moi/
 
 [thegioidemonline.vn]
-match = -50.0%%
-title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội
+match = -109.1%%
+title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội - Chăn ga gối
 url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc-04.html
 
 [ru9.vn]
-match = -86.4%%
-title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
+match = -90.9%%
+title = Cách Tính Diện Tích, Kích Thước Các Loại Giường Ngủ
 url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
 
 [flexhouse.vn]
@@ -42,9 +42,9 @@ title = Thảm trải sàn phòng khách trẻ trung năng động TBD2582
 url = https://flexhouse.vn/tham-trai-san-phong-khach-tre-trung-nang-dong-tbd2582
 
 [www.diepxuan.com]
-match = 31.8%%
-title = Điệp Xuân Thảm giường nỉ 200x220
-url = https://www.diepxuan.com/tham-giuong-ni-200x220.html?srsltid=AfmBOopRx0fk_GD2OhrAGX-NuBFr1ImQcw08u4p6L4sh_pzPHQ1eZOKT
+match = 40.9%%
+title = Thảm giường nỉ 150x190 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-ni-150x190.html
 
 [www.lazada.vn]
 match = -77.3%%
