--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-08-09 03:54:20
+lastsearch = 2024-08-09 06:55:21
 
 [www.diepxuan.com]
 match = 4.5%%
 title = Bộ ga chun coco 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-ga-chun-coco-180x200.html
+url = https://www.diepxuan.com/bo-ga-chun-coco-180x200.html?srsltid=AfmBOoqu8LMxVudqnjDQVzJorOUpE3ogtTnvDpaIeZlxolGso8z5x7np
 
 [shopee.vn]
 match = -54.5%%
@@ -29,7 +29,7 @@ url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
 [www.lazada.vn]
 match = -77.3%%
 title = Chiếu Điều Hòa Cao Su Non Bo Chun Chanel Coco phiên ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-bo-chun-chanel-coco-phien-ban-2023-i2300743328.html
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-bo-chun-chanel-coco-phien-ban-2023-i2300743328.html?srsltid=AfmBOorvYgHIy8m6ePDsPSOkz-BEsrk9plkvaTioHqrzc6z9JLkUaeP6
 
 [www.instagram.com]
 match = -81.8%%
@@ -49,7 +49,7 @@ url = https://www.sendo.vn/bo-ga-goi-ni-nhung-mau-xam-coco-1m6x2m-in-noi-hoa-tie
 [demxanh.com]
 match = -40.9%%
 title = Chiếu cao su non Coco bo chun màu xám nhạt
-url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-xam-nhat.html
+url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-xam-nhat.html?srsltid=AfmBOorj_wC2n6a5_kNjtK2pswx_WTyWeuN80CoksdlVzjcVg4-NxnXo
 
 [www.tiktok.com]
 match = -59.1%%
@@ -67,9 +67,9 @@ title = Chăn ga gối cho nam và sự bất tử của họa tiết sọc kẻ
 url = https://songhonghanoi.vn/chan-ga-goi-cho-nam-va-su-bat-tu-cua-hoa-tiet-soc-ke.html
 
 [www.facebook.com]
-match = -68.2%%
-title = COCO 2024 ✔️ Chiếu bọc chun mới nhất của CoCo siêu ...
-url = https://www.facebook.com/groups/151776543537474/posts/-coco-2024️-chiếu-bọc-chun-mới-nhất-của-coco-siêu-bắt-mắt-với-thiết-kế-mới-nhất️/776878567693932/
+match = -13.6%%
+title = Chăn ga gối đệm - CoCo HOUSE | Vinh Yen
+url = https://www.facebook.com/hoa32/
 
 [foreverbedding.net]
 match = -27.3%%
