--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-08-09 04:53:34
+lastsearch = 2024-08-09 06:49:28
 
 [www.instagram.com]
 match = -33.3%%
@@ -12,9 +12,9 @@ title = Instagram
 url = https://www.instagram.com/radii_media/p/C4ft1kFvyln/
 
 [hk.linkedin.com]
-match = -100.0%%
-title = Hoi Yee Ng - Christian Dior Couture
-url = https://hk.linkedin.com/in/hoi-yee-ng-662733106
+match = -215.4%%
+title = Vincy Chan - Christian Dior高級時裝公司
+url = https://hk.linkedin.com/in/vincy-chan-982992221
 
 [wwd.com]
 match = -253.8%%
@@ -107,9 +107,9 @@ title = WAI SENG CHAN - Senior Sales Associate - Christian Dior ...
 url = https://my.linkedin.com/in/wai-seng-chan-791010270
 
 [www.dior.com]
-match = -30.8%%
-title = Dior official website
-url = https://www.dior.com/en_int/fashion
+match = -246.2%%
+title = Dior Boutique | China | Xi'an | 261 Chang'An Road North
+url = https://www.dior.com/fashion/stores/en_us/china/xian/261-changan-road-north
 
 [www.gettyimages.fr]
 match = -253.8%%
