--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-08-09 03:36:25
+lastsearch = 2024-08-09 06:53:15
 
 [shopee.vn]
 match = -152.6%%
@@ -28,8 +28,8 @@ url = https://chieutrelinhchi.com/chieu-truc-1m/chieu-truc-hat-nho-khong-vien-ma
 
 [www.youtube.com]
 match = -147.4%%
-title = Nhạc Thiếu Nhi Tập Thể Dục Buổi Sáng, Cá Vàng Bơi, Con ...
-url = https://www.youtube.com/watch?v=aW3qoZeqHik
+title = Nhạc Thiếu Nhi Vui Nhộn Cho Bé Yêu - Dậy Đi Ba Ơi, Chúc ...
+url = https://www.youtube.com/watch?v=or-AKdAjpMI
 
 [dochoihoangthu.com]
 match = -121.1%%
