--- a/images/nem-caosu-lien-a-classic-180x200x10/config.ini
+++ b/images/nem-caosu-lien-a-classic-180x200x10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-lien-a-classic-180x200x10.html
 lastopen = 2024-07-07 18:25:44
 
 [search]
-lastsearch = 2024-08-09 05:58:43
+lastsearch = 2024-08-09 06:44:20
 
 [nemgiakho.com]
 match = 8.6%%
@@ -85,4 +85,9 @@ url = https://www.diepxuan.com/nem-caosu-lien-a-classic-180x200x10.html
 match = 28.6%%
 title = NỆM CAO SU THIÊN NHIÊN LIÊN Á – CLASSIC - NEM.VN
 url = https://nem.vn/nem-cao-su-thien-nhien-lien-a-classic
+
+[baohatinh.vn]
+match = 0.0%%
+title = 
+url = https://baohatinh.vn/nem-cao-su-non-co-tot-khong-va-nhung-diem-manh-noi-troi-post263742.html
 
