--- a/images/nem-everon-140x200x9/config.ini
+++ b/images/nem-everon-140x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-140x200x9.html
 lastopen = 2024-06-06 17:10:12
 
 [search]
-lastsearch = 2024-08-08 11:58:56
+lastsearch = 2024-08-09 06:52:54
 
 [www.everonvn.vn]
 match = -120.0%%
@@ -59,7 +59,7 @@ url = https://www.diepxuan.com/everon/nem-everon.html?p=2
 [thegioidemonline.com]
 match = -40.0%%
 title = Bảng giá nệm Sông Hồng mới nhất 2022
-url = https://thegioidemonline.com/bang-gia-nem-song-hong-moi-nhat-2019.html?srsltid=AfmBOoozUSEPOOdgUYTBEs85jKy-Uolm0mam4dcojnFlkHmgsMbS0pnE
+url = https://thegioidemonline.com/bang-gia-nem-song-hong-moi-nhat-2019.html
 
 [www.changagoidemeveron.vn]
 match = -105.0%%
@@ -94,7 +94,7 @@ url = https://www.amazon.com/ask/questions/asin/B00IGBDXEA
 [demxanh.com]
 match = -110.0%%
 title = Bảng giá đệm bông ép Everhome khuyến mãi mới nhất ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-everhome-nam-2023.html?srsltid=AfmBOoqYdcuJN54EB-ebfgnZc_Ws4WjuqqeosBRgp5rLsC-3g4BS8WUN
+url = https://demxanh.com/bang-gia-dem-bong-ep-everhome-nam-2023.html
 
 [thegioinem.com]
 match = -133.3%%
