--- a/images/nem-everon-180x200x15-extrafoam/config.ini
+++ b/images/nem-everon-180x200x15-extrafoam/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-180x200x15-extrafoam.html
 lastopen = 2024-06-06 17:10:38
 
 [search]
-lastsearch = 2024-08-09 03:57:04
+lastsearch = 2024-08-09 06:48:46
 
 [www.everonvn.vn]
 match = -38.7%%
@@ -19,7 +19,7 @@ url = https://nemgiakho.com/mua-nem-everon-180x200x15-gia-re-o-dau.html
 [everon.com.vn]
 match = 17.9%%
 title = Đệm Bông ép Extrafoam EVERON
-url = https://everon.com.vn/dem-bong-ep-extrafoam-everon/?srsltid=AfmBOoq6yF3ElKxI3dSy19DPbtFn_4J3QWJEMQJ00Rqdlgu2nyXO4kkK
+url = https://everon.com.vn/dem-bong-ep-extrafoam-everon/
 
 [nemeveron.com.vn]
 match = 42.9%%
@@ -39,7 +39,7 @@ url = https://akasi.com.vn/san-pham/dem-bong-ep-everon/
 [demxanh.com]
 match = -19.4%%
 title = Đệm Foam Everon ExtraFoam chính hãng giá rẻ Hà Nội
-url = https://demxanh.com/dem-foam-everon-extrafoam.html?srsltid=AfmBOoowV32BEflBIhZne7v98qJPqYNdGHNFLqFf_BKxvckyXE7pphXZ
+url = https://demxanh.com/dem-foam-everon-extrafoam.html
 
 [everon.online]
 match = 0.0%%
