--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-08-09 03:22:51
+lastsearch = 2024-08-09 06:48:26
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,9 +22,9 @@ title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
-match = -33.3%%
-title = Nam Joo-hyuk
-url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
+match = -45.5%%
+title = Kristi Noem
+url = https://en.wikipedia.org/wiki/Kristi_Noem
 
 [www.facebook.com]
 match = -165.0%%
@@ -37,9 +37,9 @@ title = US strategic bombers conduct drills with Japan and South ...
 url = https://www.vietnam.vn/en/may-bay-nem-bom-chien-luoc-my-tap-tran-voi-nhat-han-o-ban-dao-trieu-tien/
 
 [www.youtube.com]
-match = -140.0%%
-title = Billy Joel - We Didn't Start the Fire (Official HD Video)
-url = https://www.youtube.com/watch?v=eFTLKWw542g
+match = -160.0%%
+title = Prestige Battle Lion Leona Skin Spotlight - Pre-Release - PBE ...
+url = https://www.youtube.com/watch?v=Ivqu1D_PBWQ
 
 [som.yale.edu]
 match = -110.0%%
@@ -192,9 +192,9 @@ title = 12 Days in Seoul - by LA Seoulite - Everything about Korea
 url = https://laseoulite.substack.com/p/12-days-in-seoul
 
 [www.tiktok.com]
-match = -170.0%%
-title = me vs sour 😖 thank you @Fruit Riot for sending me these to try ...
-url = https://www.tiktok.com/@peachcreamsoda/video/7398389927420906783
+match = 0.0%%
+title = Korean Englishman Harvey
+url = https://www.tiktok.com/discover/korean-englishman-harvey?lang=en
 
 [www.imdb.com]
 match = 0.0%%
