--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-08-09 06:21:19
+lastsearch = 2024-08-09 06:47:06
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -107,9 +107,9 @@ title = TUI Hotels & Resorts shares green recommendations to ...
 url = https://www.ttgasia.com/2023/06/16/tui-hotels-resorts-shares-green-recommendations-to-drive-sustainable-hospitality/
 
 [www.tui.co.uk]
-match = -258.3%%
-title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
-url = https://www.tui.co.uk/
+match = -183.3%%
+title = Travel Money | Foreign Currency Exchange
+url = https://www.tui.co.uk/travel-money
 
 [maritime-executive.com]
 match = -316.7%%
@@ -274,7 +274,7 @@ url = https://www.musement.com/us/discover-the-tui-pass-l/
 [luxuryescapes.com]
 match = -158.3%%
 title = TUI MAGIC LIFE Bodrum - Adults Only (16+)
-url = https://luxuryescapes.com/au/partner/tui-magic-life-bodrum-adults-only-16/6e33456f-5788-41a9-83e1-57ab36829fe7
+url = https://luxuryescapes.com/au/property/tui-magic-life-bodrum-adults-only-16-bedbank:6e33456f-5788-41a9-83e1-57ab36829fe7
 
 [www.tui-reisecenter.sk]
 match = -258.3%%
@@ -510,4 +510,9 @@ url = https://www.datacenterdynamics.com/en/analysis/the-transformation-fallacy-
 match = -125.0%%
 title = Gangdong, South Korea to Tui, Spain
 url = https://origin.savvytime.com/converter/south-korea-gangdong-to-spain-tui
+
+[www.allbodrumhotels.org]
+match = -216.7%%
+title = Resort Tui Magic Life Bodrum - Adults Only (16+)
+url = https://www.allbodrumhotels.org/en/property/ersan-resort-spa.html
 
