--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-08-09 04:18:16
+lastsearch = 2024-08-09 07:01:16
 
 [everonvn.com.vn]
 match = -111.1%%
@@ -24,7 +24,7 @@ url = https://www.reddit.com/r/VietNam/comments/11el4ie/how_do_you_get_vietnames
 [www.facebook.com]
 match = -83.3%%
 title = Chăn ga gối đệm giá rẻ Tiên Tiên | Da Nang
-url = https://www.facebook.com/chuyensigagoi/?locale=uk_UA
+url = https://www.facebook.com/chuyensigagoi/
 
 [muathongminh.vn]
 match = -144.4%%
@@ -32,14 +32,14 @@ title = Lịch sử giá 🥑 Vỏ gối đầu cotton poly 45x65 🥑 áo gối
 url = https://muathongminh.vn/xu-huong-vo-goi-dau-cotton-poly-45x65-ao-goi-nam-nhieu-mau-sac-mau-bo-xam-duoc-chon-mau-p.1__19609304624__137416996
 
 [www.diepxuan.com]
-match = 11.1%%
-title = Điệp Xuân Vỏ gối EP1818 45x65
-url = https://www.diepxuan.com/vo-goi-ep1818-45x65.html
+match = -11.1%%
+title = Vỏ gối EPM21070 45x65 - Điệp Xuân
+url = https://www.diepxuan.com/vo-goi-epm21070-45x65.html
 
 [www.everonqb.com]
-match = -111.1%%
-title = Vỏ gối EPC19056 45x65 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/vo-goi-epc19056-45x65.html
+match = -88.9%%
+title = Vỏ gối TRAINS 45x65 - Everon Quảng Bình Trang Chủ
+url = https://www.everonqb.com/vo-goi-trains-45x65.html
 
 [shopee.vn]
 match = -127.8%%
